Integrate mongoose and fetch details from mongodb atlas
