# api/swagger/swagger.yaml
@@ -4,9 +4,9 @@ info:
   title: Hello World App
 # during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths 
+# basePath prefixes all resource paths
 basePath: /
-# 
+#
 schemes:
   # tip: remove http to make production-grade
   - http
@@ -18,6 +18,41 @@ consumes:
 produces:
   - application/json
 paths:
+  /users/login:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: users
+    post:
+      description: User Authenticate
+      # used as the method name of the controller
+      operationId: authenticateUser
+      consumes:
+        - "application/json"
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            required:
+              - user_email
+              - user_pass
+            properties:
+              user_email:
+                type: string
+                format: email
+              user_pass:
+                type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            type: object
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorSchema"
+
   /users/{userId}/tweets:
     # binds a127 app logic to a route
     x-swagger-router-controller: users
@@ -40,7 +75,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorSchema"
-  
+
   /users/{userId}/details:
     # binds a127 app logic to a route
     x-swagger-router-controller: users
@@ -187,7 +222,7 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorSchema"
-  
+
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
@@ -198,11 +233,11 @@ definitions:
         type: number
       cover_img:
         type: string
-      profile_img: 
+      profile_img:
         type: string
-      full_name: 
+      full_name:
         type: string
-        
+
   UserMediaSchema:
     type: object
     properties:
